package cpp.cs5800.adv_swe.assignment1.aggregation;

public class Instructor {
    String firstName;
    String lastName;
    String officeNumber;

    public Instructor(String firstName, String lastName, String officeNumber) {
        this.firstName = firstName;
        this.lastName = lastName;
        this.officeNumber = officeNumber;
    }

    public String getFirstName() {
        return firstName;
    }

    public void setFirstName(String firstName) {
        this.firstName = firstName;
    }

    public String getLastName() {
        return lastName;
    }

    public void setLastName(String lastName) {
        this.lastName = lastName;
    }

    public String getOfficeNumber() {
        return officeNumber;
    }

    public void setOfficeNumber(String officeNumber) {
        this.officeNumber = officeNumber;
    }

    @Override
    public String toString() {
        return "Instructor{" +
                "firstName='" + firstName +'\''+
                ", lastName='" + lastName +'\''+
                ", officeNumber='" + officeNumber +'\''+
                '}';
    }
}
